Bug 500052 - I can't resize or move the area of my drawing tablet
Summary: I can't resize or move the area of my drawing tablet
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_tablet (other bugs)
Version First Reported In: 6.3.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-14 10:19 UTC by chvmlol6
Modified: 2025-02-18 13:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.1
Sentry Crash Report:


Attachments
A screenshot were you can see the observed result. (42.24 KB, image/png)
2025-02-14 10:19 UTC, chvmlol6
Details

Note You need to log in before you can comment on or make changes to this bug.
Description chvmlol6 2025-02-14 10:19:01 UTC
Created attachment 178352 [details]
A screenshot were you can see the observed result.

SUMMARY
I can't resize or move the area of my drawing tablet "One by Wacom" using the system settings. I can still resize and move the Screen area. The Tablet will behave as if the full drawing tablet area was selected.

STEPS TO REPRODUCE
1. Plug in the "One by Wacom" drawing tablet
2. Open the Drawing Tablet module in the System Settings
3. The Tablet is always shown to have no Selected area a Ratio of "0% 0% 0% 0%" and no Resize area button.


OBSERVED RESULT
The drawing tablet Ratio shown is "0% 0% 0% 0%" and the Resize area button isn't there. This is the behaviour in all the "Map to screen" and "Mapped Area" options. In the attachment is a screenshot were you can see the result. Apply will result as if the full drawing tablet area was selected with the correct use of the Screen mapping.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora Linux 40
KDE Plasma Version:  6.3.0
KDE Frameworks Version:  6.10.0
Qt Version:  6.8.0
Comment 1 Nicolas Fella 2025-02-15 11:30:37 UTC
The feature to change the input area of the tablet requires libinput 1.27. Unfortunately Fedora 40 only has 1.26.2.

Of course the UI should handle this better though
Comment 2 Bug Janitor Service 2025-02-17 02:50:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2818
Comment 3 Joshua Goins 2025-02-18 13:22:10 UTC
Git commit 15a93e777be4afacff1683135f651518cb7afb9a by Joshua Goins.
Committed on 18/02/2025 at 13:06.
Pushed by redstrate into branch 'master'.

kcms/tablet: Fix appearance of input area if changing it is unsupported

This feature is only supported on libinput >=1.27, but I forgot to
re-test it using an older libinput and this bug slipped into 6.3.

The source of the bug isn't immediately obvious, this is chalked up to
intentional behavior in libkwindevices. If a property is reported as
unsupported, then it default constructs a value (in this case, a
QRectF.) But we don't want a default-constructed QRectF, we need a
QRectF with a size of 1x1.
FIXED-IN: 6.3.1

M  +1    -1    kcms/libkwindevices/inputdevice.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/15a93e777be4afacff1683135f651518cb7afb9a
Comment 4 Joshua Goins 2025-02-18 13:27:01 UTC
Git commit 0fe773bbec0d074eb86516a23762396e415d9fb9 by Joshua Goins.
Committed on 18/02/2025 at 13:22.
Pushed by redstrate into branch 'Plasma/6.3'.

kcms/tablet: Fix appearance of input area if changing it is unsupported

This feature is only supported on libinput >=1.27, but I forgot to
re-test it using an older libinput and this bug slipped into 6.3.

The source of the bug isn't immediately obvious, this is chalked up to
intentional behavior in libkwindevices. If a property is reported as
unsupported, then it default constructs a value (in this case, a
QRectF.) But we don't want a default-constructed QRectF, we need a
QRectF with a size of 1x1.
FIXED-IN: 6.3.1


(cherry picked from commit 15a93e777be4afacff1683135f651518cb7afb9a)

Co-authored-by: Joshua Goins <josh@redstrate.com>

M  +1    -1    kcms/libkwindevices/inputdevice.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/0fe773bbec0d074eb86516a23762396e415d9fb9